--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
     <title>Promo Gaming Mode</title>
   </head>
   <body>
-    <div class="container">
+    <div class="page">
       <header class="header">
         <a
           class="header__logo-img"
           href="https://www.kaspersky.ru/"
           target="_blank"
         ></a>
-        <select name="currency" id="currency" class="header__currency">
-          <option value="gbp">GBP</option>
-          <option value="eur">EUR</option>
-          <option value="usd">USD</option>
+        <select name="currency" id="currency" class="header__currency currency">
+          <option class="currency__item" value="gbp">GBP</option>
+          <option class="currency__item" value="eur">EUR</option>
+          <option class="currency__item" value="usd">USD</option>
         </select>
       </header>
 
