--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promo Gaming Mode</title>
-  </head>
-  <body>
-    <div class="page">
-      <header class="header">
-        <a
-          class="header__logo-img"
-          href="https://www.kaspersky.ru/"
-          target="_blank"
-        ></a>
-        <select name="currency" id="currency" class="header__currency currency">
-          <option class="currency__item" value="gbp">GBP</option>
-          <option class="currency__item" value="eur">EUR</option>
-          <option class="currency__item" value="usd">USD</option>
-        </select>
-      </header>
+</head>
 
-      <main>
-        <div class="banner"></div>
-        <div class="buy-block"></div>
-      </main>
+<body class="body">
+    <div class="page">
+        <div class="page__inner">
+            <header class="header">
+                <div class="header__inner">
+                    <a class="header__logo-img" href="https://www.kaspersky.ru/" target="_blank"></a>
+                    <select name="currency" id="currency" class="header__currency currency">
+            <option class="currency__item" value="gbp">GBP</option>
+            <option class="currency__item" value="eur">EUR</option>
+            <option class="currency__item" value="usd">USD</option>
+          </select>
+                </div>
+            </header>
+
+            <main class="main">
+                <div class="banner">
+                    <div class="banner__text-wrapper">
+                        <h1 class="banner__title">Don’t let malware defeat you</h1>
+                        <div class="banner__line"></div>
+                        <p class="banner__subtitle">
+                            Protect your devices with<br />a&nbsp;security suite made for gamers
+                        </p>
+                        <p class="banner__subtitle banner__subtitle_mobile">
+                            Protect your devices with<br />anti-malware made for<br />gamers
+                        </p>
+                        <ul class="banner__options">
+                            <li class="banner__options-item">
+                                <span class="banner__options-item_title">Gaming mode: </span> Ensures optimal PC performance while you play
+                            </li>
+                            <li class="banner__options-item">
+                                <span class="banner__options-item_title"> 100% detection rate: </span> Never misses a&nbsp;threat
+                            </li>
+                            <li class="banner__options-item">
+                                <span class="banner__options-item_title">Cutting-edge cybersecurity: </span> Runs on AI overseen by world-leading threat analysts
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="compatibility">
+                    <p class="compatibility__text">Compatible with:</p>
+                    <ul class="compatibility__items">
+                        <li class="compatibility__item">
+                            <a href="" class="compatibility__item_windows"></a>
+                        </li>
+                        <li class="compatibility__item">
+                            <a href="/" class="compatibility__item_macos"></a>
+                        </li>
+                        <li class="compatibility__item">
+                            <a href="/" class="compatibility__item_andriod"></a>
+                        </li>
+                        <li class="compatibility__item">
+                            <a href="/" class="compatibility__item_ios"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="buy-block">
+                    <div class="buy-block__product-card product-card">
+                        <div class="product-card__info">
+                            <a href="" class="product-card__logo"></a>
+                            <div class="product-card__about">
+                                <p class="product-card__name">Kaspersky Internet Security</p>
+                                <div class="product-card__rating">
+                                    <div class="product-card__stars">
+                                        <div class="product-card__star"></div>
+                                        <div class="product-card__star"></div>
+                                        <div class="product-card__star"></div>
+                                        <div class="product-card__star"></div>
+                                        <div class="product-card__half-star"></div>
+                                    </div>
+                                    <a href="/" class="product-card__reviews">(1503 reviews)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-card__prices">
+                            <p class="product-card__discont">Save 20%</p>
+                            <p class="product-card__old-price">£34<span class="product-card__cents">.99</span></p>
+                            <p class="product-card__new-price">£35<span class="product-card__cents">.99</span></p>
+                            <p class="product-card__device_mini"> - 3 Devices, 1 year</p>
+                        </div>
+                        <div class="product-card__buying">
+                            <div class="product-card__container-devices">
+                                <select class="product-card__devices" name="devices" id="devices"></select>
+                                <div class="product-card__inner-container-devices"></div>
+                            </div>
+                            <button class="product-card__button">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </main>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
